--- a/promitor-agent-scraper/templates/secret.yaml
+++ b/promitor-agent-scraper/templates/secret.yaml
@@ -2,10 +2,10 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ template "promitor-agent-scraper.secretname" . }}
+  name: {{ template "az-promitor-agent-scraper.secretname" . }}
   namespace: {{ .Release.Namespace }}
   labels:
-    {{- include "promitor-agent-scraper.labels" . | nindent 4 }}
+    {{- include "az-promitor-agent-scraper.labels" . | nindent 4 }}
 type: Opaque
 data:
   {{- if .Values.azureAuthentication.identity.key}}
