--- a/promitor-agent-scraper/templates/configmap.yaml
+++ b/promitor-agent-scraper/templates/configmap.yaml
@@ -3,10 +3,10 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: config-map-{{ template "promitor-agent-scraper.name" . }}
+  name: config-map-{{ template "az-promitor-agent-scraper.name" . }}
   namespace: {{ .Release.Namespace }}
   labels:
-    {{- include "promitor-agent-scraper.labels" . | nindent 4 }}
+    {{- include "az-promitor-agent-scraper.labels" . | nindent 4 }}
 data:
   runtime.yaml: |-
       server:
