--- a/promitor-agent-scraper/templates/deployment.yaml
+++ b/promitor-agent-scraper/templates/deployment.yaml
@@ -1,10 +1,10 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ template "promitor-agent-scraper.name" . }}
+  name: {{ template "az-promitor-agent-scraper.name" . }}
   namespace: {{ .Release.Namespace }}
   labels:
-    {{- include "promitor-agent-scraper.labels" . | nindent 4 }}
+    {{- include "az-promitor-agent-scraper.labels" . | nindent 4 }}
 {{- if semverCompare "<1.19-0" .Capabilities.KubeVersion.Version }}
   annotations:
     seccomp.security.alpha.kubernetes.io/pod: {{ .Values.securityContext.seccompProfile.type }}
@@ -18,11 +18,11 @@ spec:
       maxUnavailable: 1
   selector:
     matchLabels:
-      {{- include "promitor-agent-scraper.selectorLabels" . | nindent 6 }}
+      {{- include "az-promitor-agent-scraper.selectorLabels" . | nindent 6 }}
   template:
     metadata:
       labels:
-        {{- include "promitor-agent-scraper.selectorLabels" . | nindent 8 }}
+        {{- include "az-promitor-agent-scraper.selectorLabels" . | nindent 8 }}
       {{- if .Values.podLabels }}
       {{- toYaml .Values.podLabels | nindent 8 }}
       {{- end }}
@@ -52,7 +52,7 @@ spec:
       {{- end }}
       {{- end }}
       {{- if .Values.rbac.create }}
-      serviceAccountName: {{ template "promitor-agent-scraper.serviceaccountname" . }}
+      serviceAccountName: {{ template "az-promitor-agent-scraper.serviceaccountname" . }}
       {{- end }}
       {{- with .Values.image.pullSecrets }}
       imagePullSecrets:
@@ -80,14 +80,14 @@ spec:
           - name: PROMITOR_AUTH_APPKEY
             valueFrom:
               secretKeyRef:
-                name: {{ template "promitor-agent-scraper.secretname" . }}
+                name: {{ template "az-promitor-agent-scraper.secretname" . }}
                 key: {{ .Values.secrets.appKeySecret }}
   {{- end}}
   {{- if or (.Values.metricSinks.atlassianStatuspage.apiKey) (and (eq .Values.metricSinks.atlassianStatuspage.enabled true) (eq .Values.secrets.createSecret false)) }}
           - name: PROMITOR_ATLASSIAN_STATUSPAGE_APIKEY
             valueFrom:
               secretKeyRef:
-                name: {{ template "promitor-agent-scraper.secretname" . }}
+                name: {{ template "az-promitor-agent-scraper.secretname" . }}
                 key: {{ .Values.secrets.atlassianStatuspageApiKey }}
   {{- end }}
   {{- if .Values.deployment.env.extra }}
@@ -100,7 +100,7 @@ spec:
           securityContext: {{- omit .Values.containerSecurityContext "enabled" | toYaml | nindent 12 }}
           {{- end }}
           volumeMounts:
-          - name: config-volume-{{ template "promitor-agent-scraper.name" . }}
+          - name: config-volume-{{ template "az-promitor-agent-scraper.name" . }}
             mountPath: /config/
           {{- if and .Values.containerSecurityContext.enabled .Values.containerSecurityContext.readOnlyRootFilesystem }}
           - name: tmp
@@ -138,9 +138,9 @@ spec:
       affinity: {{- tpl (toYaml .) $ | nindent 8 }}
       {{- end }}
       volumes:
-        - name: config-volume-{{ template "promitor-agent-scraper.name" . }}
+        - name: config-volume-{{ template "az-promitor-agent-scraper.name" . }}
           configMap:
-            name: config-map-{{ template "promitor-agent-scraper.name" . }}
+            name: config-map-{{ template "az-promitor-agent-scraper.name" . }}
         {{- if and .Values.containerSecurityContext.enabled .Values.containerSecurityContext.readOnlyRootFilesystem }}
         - emptyDir: {}
           name: tmp
