--- a/promitor-agent-scraper/templates/podsecuritypolicy.yaml
+++ b/promitor-agent-scraper/templates/podsecuritypolicy.yaml
@@ -2,10 +2,10 @@
 apiVersion: policy/v1beta1
 kind: PodSecurityPolicy
 metadata:
-  name: {{ template "promitor-agent-scraper.name" . }}
+  name: {{ template "az-promitor-agent-scraper.name" . }}
   namespace: {{ .Release.Namespace }}
   labels:
-    {{- include "promitor-agent-scraper.labels" . | nindent 4 }}
+    {{- include "az-promitor-agent-scraper.labels" . | nindent 4 }}
 spec:
   # Prevents running in privileged mode
   privileged: false
