--- a/promitor-agent-scraper/templates/prometheusrule.yaml
+++ b/promitor-agent-scraper/templates/prometheusrule.yaml
@@ -2,19 +2,19 @@
 apiVersion: monitoring.coreos.com/v1
 kind: PrometheusRule
 metadata:
-  name: {{ template "promitor-agent-scraper.fullname" . }}
+  name: {{ template "az-promitor-agent-scraper.fullname" . }}
 {{- with .Values.prometheusRule.namespace }}
   namespace: {{ . }}
 {{- end }}
   labels:
-{{- include "promitor-agent-scraper.labels" . | nindent 4 }}
+{{- include "az-promitor-agent-scraper.labels" . | nindent 4 }}
 {{- with .Values.prometheusRule.additionalLabels }}
 {{ toYaml . | indent 4 }}
 {{- end }}
 spec:
 {{- with .Values.prometheusRule.rules }}
   groups:
-    - name: {{ template "promitor-agent-scraper.name" $ }}
+    - name: {{ template "az-promitor-agent-scraper.name" $ }}
       rules: {{ tpl (toYaml .) $ | nindent 8 }}
 {{- end }}
 {{- end }}
