--- a/promitor-agent-scraper/templates/role.yaml
+++ b/promitor-agent-scraper/templates/role.yaml
@@ -6,17 +6,17 @@ apiVersion: rbac.authorization.k8s.io/v1beta1
 {{- end }}
 kind: Role
 metadata:
-  name: {{ template "promitor-agent-scraper.name" . }}
+  name: {{ template "az-promitor-agent-scraper.name" . }}
   namespace: {{ .Release.Namespace }}
   labels:
-    {{- include "promitor-agent-scraper.labels" . | nindent 4 }}
+    {{- include "az-promitor-agent-scraper.labels" . | nindent 4 }}
 rules:
   - apiGroups:
     - policy
     resources:
     - podsecuritypolicies
     resourceNames:
-    - {{ template "promitor-agent-scraper.name" . }}
+    - {{ template "az-promitor-agent-scraper.name" . }}
     verbs:
     - use
 {{- end -}}
