--- a/promitor-agent-scraper/templates/rolebinding.yaml
+++ b/promitor-agent-scraper/templates/rolebinding.yaml
@@ -6,15 +6,15 @@ apiVersion: rbac.authorization.k8s.io/v1beta1
 {{- end }}
 kind: RoleBinding
 metadata:
-  name: {{ template "promitor-agent-scraper.name" . }}
+  name: {{ template "az-promitor-agent-scraper.name" . }}
   namespace: {{ .Release.Namespace }}
   labels:
-    {{- include "promitor-agent-scraper.labels" . | nindent 4 }}
+    {{- include "az-promitor-agent-scraper.labels" . | nindent 4 }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
-  name: {{ template "promitor-agent-scraper.name" . }}
+  name: {{ template "az-promitor-agent-scraper.name" . }}
 subjects:
   - kind: ServiceAccount
-    name: {{ template "promitor-agent-scraper.serviceaccountname" . }}
+    name: {{ template "az-promitor-agent-scraper.serviceaccountname" . }}
 {{- end -}}
