--- a/promitor-agent-scraper/templates/service.yaml
+++ b/promitor-agent-scraper/templates/service.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ template "promitor-agent-scraper.name" . }}
+  name: {{ template "az-promitor-agent-scraper.name" . }}
   namespace: {{ .Release.Namespace }}
   labels:
-    {{- include "promitor-agent-scraper.labels" . | nindent 4 }}
+    {{- include "az-promitor-agent-scraper.labels" . | nindent 4 }}
 {{- if or (.Values.service.loadBalancer.enabled) (.Values.metricSinks.prometheusScrapingEndpoint.enableServiceDiscovery) }}
   annotations:
   {{- if .Values.service.loadBalancer.azure.dnsPrefix }}
@@ -31,4 +31,4 @@ spec:
       targetPort: {{ .Values.service.targetPort }}
       protocol: TCP
   selector:
-    {{- include "promitor-agent-scraper.selectorLabels" . | nindent 4 }}
+    {{- include "az-promitor-agent-scraper.selectorLabels" . | nindent 4 }}
